--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -13,3 +13,10 @@ font-size: 7vh;
     font-size: 2vh;
     
     }
+
+.bruteForce {
+  /* color:green;
+  background-color: green; */
+visibility: hidden;
+height: 0vh;
+}
